# FDF

./: CMakeLists.txt  Makefile  fdf  leaks.txt  main.c  testmap.txt
includes/: fdf.h
libft/: Makefile  ft_strchr.c  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strndup.c  get_next_line.c  get_next_line.h
maps/: 20-60.fdf  elem.fdf  lol.fdf  pyramide.fdf  test.fdf
src/: bresenham.c  colors.c  create_coords.c  create_mlx_struct.c  create_structs.c  draw_axis.c  draw_grid.c  error_handling.c  free_3d_array.c  key_handlers.c  main.c  make_cube.c  make_grid.c  make_grid_helpers.c  make_square.c  map_validation.c  rot_g_onkey.c  rotate.c  rotate_grid.c  tests.c
